tests/NormalTests/paczka1/fuzzy1/33238724.err
Error in line 1: S771 A846 30,6
Error in line 3: S771 A961 16,10
Error in line 2: S771 A961 27,1
Error in line 4: pMfpI8WQgS6 A961 82,5
Error in line 21: pMfpI8WQgS6 S458 42,0
Error in line 23: pMfpI8WQgS6 A846 97,0
Error in line 28: hxgRdLA4Mx A846 18,1
